--- a/src/app/ubs/ubs/components/ubs-main-page/ubs-main-page.component.scss
+++ b/src/app/ubs/ubs/components/ubs-main-page/ubs-main-page.component.scss
@@ -394,6 +394,7 @@
       line-height: 15px;
       letter-spacing: -0.025em;
       margin: 0;
+      text-align: center;
     }
 
     p.step-order-content {
@@ -402,6 +403,7 @@
       font-size: 12px;
       line-height: 16px;
       font-weight: 500;
+      text-align: center;
     }
   }
 }
@@ -472,6 +474,7 @@
       font-size: 25px;
       line-height: 21.85px;
       letter-spacing: -0.025em;
+      text-align: center;
 
       .odd {
         margin-bottom: 20px;
@@ -488,6 +491,7 @@
       font-size: 16px;
       line-height: 19.5px;
       font-weight: 500;
+      text-align: center;
     }
   }
 }
@@ -561,6 +565,7 @@ section .main-container {
         font-size: 25px;
         line-height: 21.85px;
         letter-spacing: -0.025em;
+        text-align: center;
 
         .odd {
           margin-bottom: 20px;
@@ -577,6 +582,7 @@ section .main-container {
         font-size: 16px;
         line-height: 19.5px;
         font-weight: 500;
+        text-align: center;
       }
     }
   }
