--- a/src/app/main/component/comments/components/comment-textarea/comment-textarea.component.html
+++ b/src/app/main/component/comments/components/comment-textarea/comment-textarea.component.html
@@ -50,7 +50,7 @@
   [emojiSize]="20"
   [totalFrequentLines]="2"
   [darkMode]="false"
-  [style]="{ width: '506px' }"
+  [style]="{ width: emojiPickerWidth }"
   [showPreview]="false"
   *ngIf="isEmojiPickerOpen"
   (emojiClick)="onEmojiClick($event)"
