unable editing orders` comments in statuses done/cancelled/brought_it_himself

--- a/src/app/shared/address-input/address-input.component.html
+++ b/src/app/shared/address-input/address-input.component.html
@@ -119,6 +119,7 @@
     <textarea
       id="addressComment"
       class="form-control"
+      [readonly]="isUneditableStatus"
       formControlName="addressComment"
       placeholder="{{ 'personal-info.pop-up-comment-placeholder' | translate }}"
       (change)="onCommentChange()"
