--- a/src/app/ubs/ubs-admin/components/ubs-admin-order-details-form/ubs-admin-order-details-form.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-order-details-form/ubs-admin-order-details-form.component.html
@@ -234,6 +234,7 @@
             formControlName="customerComment"
             placeholder="{{ 'order-details.client-comment.placeholder' | translate }}"
             id="customer-comment"
+            [readonly]="isDisabledStatus"
           ></textarea>
           <div class="validation" *ngIf="customerComment.invalid && customerComment.touched">
             <app-ubs-input-error [formElement]="customerComment"> </app-ubs-input-error>
