--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.html
@@ -364,6 +364,7 @@
           [id]="row.id"
           [ordersToChange]="idsToChange"
           [isAllChecked]="allChecked"
+          [isUneditableStatus]="checkStatusOfOrders(row.id)"
           (cancelEdit)="cancelEditCell($event)"
           (editCommentCell)="editCell($event)"
           (showBlockedInfo)="showBlockedMessage($event)"
