--- a/src/app/ubs/ubs/components/ubs-order-details/ubs-order-details.component.html
+++ b/src/app/ubs/ubs/components/ubs-order-details/ubs-order-details.component.html
@@ -31,7 +31,7 @@
           <li *ngFor="let bag of bags" class="main-list-item">
             <span class="bag-name" [appLangValue]="{ ua: bag.name, en: bag.nameEng }"></span>
             <span class="bag-name">{{ bag.capacity | volume }}</span>
-            <span class="bag-name">{{ bag.price | localizedCurrency }}</span>
+            <span class="bag-name">{{ bag.price | localizedCurrency: true }}</span>
             <div class="bag-name form-group count">
               <div class="quantity-input-wrapper">
                 <button (click)="changeQuantity(bag.id, -1)" type="button">
@@ -55,7 +55,7 @@
                 </button>
               </div>
             </div>
-            <span class="bag-name label-total"> {{ getBagQuantity(bag.id) * bag.price | localizedCurrency }}</span>
+            <span class="bag-name label-total"> {{ getBagQuantity(bag.id) * bag.price | localizedCurrency: true }}</span>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@
               <p class="total-content" [class.d-none]="orderSum === 0">
                 <span>{{ 'order-details.order-amount' | translate }}</span>
                 <span>
-                  <strong>{{ orderSum | localizedCurrency }}</strong>
+                  <strong>{{ orderSum | localizedCurrency: true }}</strong>
                 </span>
               </p>
               <p class="total-content" *ngIf="certificateUsed">
@@ -84,7 +84,7 @@
               <p class="total-content">
                 <span>{{ 'order-details.amount-due' | translate }} </span>
                 <span>
-                  <strong>{{ finalSum | localizedCurrency }}</strong>
+                  <strong>{{ finalSum | localizedCurrency: true }}</strong>
                 </span>
               </p>
             </div>
