--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-input/table-cell-input.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-input/table-cell-input.component.html
@@ -6,6 +6,6 @@
   (mouseleave)="tooltip.hide()"
 >
   <span>{{ data }}</span>
-  <span *ngIf="!isEditable && !isBlocked && !isUneditableStatus" class="pointer" (click)="edit()">&#9998;</span>
+  <span *ngIf="!isEditable && !isBlocked && !isUneditableStatus" class="pointer" (keydown.enter)="edit()" (click)="edit()">&#9998;</span>
   <mat-spinner class="spinner" *ngIf="isBlocked" strokeWidth="3" diameter="20"></mat-spinner>
 </div>
