--- a/src/app/ubs/ubs-admin/components/ubs-admin-address-details/ubs-admin-address-details.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-address-details/ubs-admin-address-details.component.html
@@ -163,7 +163,7 @@
       </div>
       <div class="form-group comment">
         <label for="address-comment">{{ 'address-details.comment-label' | translate }}</label>
-        <textarea class="form-control" id="address-comment" rows="3" placeholder="{{ addressComment }}" disabled></textarea>
+        <textarea class="form-control" formControlName="addressComment" id="address-comment" rows="3"></textarea>
       </div>
     </div>
   </form>
