--- a/src/app/main/component/comments/components/comment-textarea/comment-textarea.component.scss
+++ b/src/app/main/component/comments/components/comment-textarea/comment-textarea.component.scss
@@ -12,7 +12,7 @@
 
 .comment-textarea-uploader {
   position: relative;
-  width: 100%;
+  width: calc(100% - 1px);
 
   .cancel-btn {
     font-size: 18px;
