--- a/src/app/ubs/ubs/components/ubs-main-page/ubs-main-page.component.scss
+++ b/src/app/ubs/ubs/components/ubs-main-page/ubs-main-page.component.scss
@@ -915,13 +915,14 @@ section .main-container {
             padding: 32px 38px;
             width: 33%;
             min-height: 139px;
+            align-items: center;
 
             h2 {
               margin: 0 0 20px 0;
               padding: 0;
               font-size: 30px;
               line-height: 37px;
-              text-align: left;
+              text-align: center;
             }
 
             p {
@@ -929,6 +930,7 @@ section .main-container {
               padding: 0;
               font-size: 18px;
               line-height: 22px;
+              text-align: center;
             }
           }
         }
@@ -1211,13 +1213,14 @@ section .main-container {
             min-width: 30%;
             max-width: 552px;
             min-height: 139px;
+            align-items: center;
 
             h2 {
               margin: 0 0 20px 0;
               padding: 0;
               font-size: 30px;
               line-height: 37px;
-              text-align: left;
+              text-align: center;
             }
 
             p {
@@ -1225,6 +1228,7 @@ section .main-container {
               padding: 0;
               font-size: 18px;
               line-height: 22px;
+              text-align: center;
             }
           }
         }
@@ -2059,9 +2063,10 @@ section .main-container {
           .time-frame {
             width: 100%;
             height: 77px;
-            padding-left: 16px;
+            padding-right: 30px;
             border: 1px solid #8c8c8c;
             border-radius: 3px;
+            align-items: center;
 
             .header-how-works {
               font-size: 18px;
