--- a/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.scss
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.scss
@@ -7,7 +7,7 @@ mat-footer-cell {
 }
 
 mat-header-cell {
-  width: 200px;
+  // width: 200px;
   background-color: var(--ubs-primary-grey);
   color: var(--ubs-primary-white);
   font-family: var(--primary-font);
@@ -15,7 +15,7 @@ mat-header-cell {
   text-align: center;
   font-size: 14px;
   min-height: 39px;
-  min-width: 48px;
+  min-width: 120px;
   overflow: hidden;
   word-wrap: break-word;
   overflow-wrap: break-word;
@@ -35,6 +35,7 @@ mat-cell {
   color: var(--ubs-primary-grey);
   font-size: 14px;
   font-family: var(--primary-font);
+  min-width: 120px;
 }
 
 mat-header-row {
@@ -47,8 +48,7 @@ mat-header-row {
   background-color: var(--ubs-primary-grey);
 }
 
-mat-header-cell:first-of-type,
-mat-cell:first-of-type {
+mat-header-cell:first-of-type {
   padding-left: 0;
 }
 
@@ -351,7 +351,6 @@ mat-spinner {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 0 20px;
 }
 
 .search_total_wr {
@@ -381,4 +380,13 @@ mat-spinner {
   justify-content: flex-end;
   align-items: center;
   margin-right: 20px;
+}
+
+.action {
+  background: var(--ubs-button-light-green);
+  border-radius: 5px;
+  border: 1px solid var(--ubs-button-light-green);
+  color: var(--ubs-tertiary-dark-grey);
+  margin-right: 5px;
+  min-width: 25px;
 }
