--- a/src/app/ubs/ubs-user/ubs-user-bonuses/ubs-user-bonuses.component.html
+++ b/src/app/ubs/ubs-user/ubs-user-bonuses/ubs-user-bonuses.component.html
@@ -31,8 +31,7 @@
           <ng-container matColumnDef="reason">
             <th mat-header-cell *matHeaderCellDef scope="col">{{ 'bonuses.reason' | translate }}</th>
             <td mat-cell *matCellDef="let element">
-              <span *ngIf="element.amount > 0">{{ 'bonuses.order-return' | translate }}</span>
-              <span *ngIf="element.amount < 0">{{ 'bonuses.order-enrollment' | translate }}</span>
+              {{ currentLang === 'ua' ? element.reasonUa : element.reasonEn }}
               <a [routerLink]="['/ubs-user/orders']" (click)="passOrderIdToRedirect(element.numberOfOrder)">
                 №{{ element.numberOfOrder }}
               </a>
