--- a/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.html
@@ -347,7 +347,7 @@
           <button class="action" (click)="openPopUp(column, row[column.title.key], row.userId)">
             {{ row[column.title.key] ? '&#9998;' : '&#43;' }}
           </button>
-          <button *ngIf="row[column.title.key]" class="action" (click)="openChat(row[column.title.key])">
+          <button *ngIf="row[column.title.key]" class="action" (click)="onOpenChat(row[column.title.key])">
             {{ 'ubs-tables.go-to-chat' | translate }}
           </button>
         </div>
