move functionality to class

--- a/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.html
@@ -357,10 +357,9 @@
             [matTooltip]="row[column.title.key]"
             matTooltipShowDelay="700"
             matTooltipClass="tooltip_style"
-            [class.pointer]="
-              column.title.key === 'clientName' || column.title.key === 'number_of_orders' || column.title.key === 'violations'
-            "
+            [class.pointer]="isPointerColumn(column)"
             (click)="openPages(column.title.key, row)"
+            (keydown)="onKeyDown($event, column.title.key, row)"
           >
             {{ row[column.title.key] }}
           </div>
