--- a/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.scss
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-customers/ubs-admin-customers.component.scss
@@ -380,3 +380,12 @@
   align-items: center;
   margin-right: 20px;
 }
+
+.action {
+  background: var(--ubs-button-light-green);
+  border-radius: 5px;
+  border: 1px solid var(--ubs-button-light-green);
+  color: var(--ubs-tertiary-dark-grey);
+  margin-right: 5px;
+  min-width: 25px;
+}
