--- a/src/app/main/component/user/components/shared/components/friends-list-pop-up/friends-list-pop-up.component.scss
+++ b/src/app/main/component/user/components/shared/components/friends-list-pop-up/friends-list-pop-up.component.scss
@@ -23,6 +23,10 @@
         color: var(--primary-green);
         margin-left: 5px;
       }
+
+      .status-done {
+        margin-left: 20px;
+      }
     }
   }
 }
