--- a/src/app/ubs/ubs/components/ubs-confirm-page/ubs-confirm-page.component.html
+++ b/src/app/ubs/ubs/components/ubs-confirm-page/ubs-confirm-page.component.html
@@ -76,7 +76,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <p class="p-40">
+          <p class="d-flex justify-content-center">
             {{ 'confirm-page.questions' | translate }} <a class="link" href="">{{ 'confirm-page.contact' | translate }}</a>
           </p>
         </div>
