--- a/src/app/main/component/user/components/profile/profile-widget/profile-header/profile-header.component.html
+++ b/src/app/main/component/user/components/profile/profile-widget/profile-header/profile-header.component.html
@@ -26,6 +26,7 @@
     </p>
     <p
       class="location"
+      *ngIf="isContentVisible(userInfo?.showLocation)"
       appCustomTooltip
       #tooltipLocation="matTooltip"
       [appCustomTooltip]="getUserCity(userInfo.userLocationDto)"
