--- a/src/app/main/component/user/components/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/main/component/user/components/profile/edit-profile/edit-profile.component.scss
@@ -145,10 +145,7 @@ h2 {
   letter-spacing: 0.2px;
 }
 
-.privacy-wrapper,
-.email-preferences {
-  @extend .checkbox-container;
-
+.section-wrapper {
   border-bottom: 1px solid #e1e5e3;
   margin-top: 40px;
   padding-bottom: 34px;
@@ -162,6 +159,58 @@ h2 {
     color: var(--quaternary-dark-grey);
     margin-bottom: 32px;
   }
+}
+
+.privacy-wrapper {
+  @extend .section-wrapper;
+
+  ul {
+    padding: 0;
+    list-style: none;
+
+    li {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 55px;
+      margin-bottom: 9px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      .label-wrapper {
+        font-family: var(--tertiary-font);
+        font-size: 14px;
+        color: var(--quaternary-dark-grey);
+        flex: 1;
+      }
+
+      .input-blocks {
+        flex-shrink: 0;
+        width: 240px;
+        display: flex;
+        justify-content: flex-start;
+
+        .input-wrapper {
+          width: 100%;
+        }
+      }
+    }
+  }
+
+  .state-select {
+    text-overflow: ellipsis;
+    padding: 5px 15px;
+    font-size: 14px;
+    height: 36px;
+    width: 100%;
+  }
+}
+
+.email-preferences {
+  @extend .checkbox-container;
+  @extend .section-wrapper;
 
   ul {
     margin-bottom: 0;
