--- a/src/app/main/component/comments/components/comments-list/comments-list.component.html
+++ b/src/app/main/component/comments/components/comments-list/comments-list.component.html
@@ -5,7 +5,7 @@
 >
   <div class="comment-avatar">
     <app-user-profile-image
-      [imgPath]="comment.author.userProfilePicturePath"
+      [imgPath]="comment.author.profilePicturePath"
       [firstName]="comment.author.name"
       [additionalImgClass]="'comments-list'"
     >
