--- a/src/app/shared/address-input/address-input.component.scss
+++ b/src/app/shared/address-input/address-input.component.scss
@@ -109,6 +109,10 @@ select {
   padding-left: 6px;
 }
 
+.validation {
+  padding-top: 5px;
+}
+
 ::ng-deep .mat-mdc-select-placeholder {
   font-size: 14px !important;
 }
