change data display format

--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-readonly/table-cell-readonly.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-readonly/table-cell-readonly.component.html
@@ -20,5 +20,5 @@
 </div>
 
 <div class="readonly readonly_date" *ngIf="date === 'orderDate' || date === 'paymentDate'">
-  <span>{{ title | date: 'dd/MM/y' }}</span>
+  <span>{{ title | date: 'dd.MM.y' }}</span>
 </div>
