--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-date/table-cell-date.component.html
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/table-cell-date/table-cell-date.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!isEditable || uneditableStatus" class="date_to_show">
   <!-- Clear when back send normal value -->
   <span *ngIf="date === '-'">{{ date }}</span>
-  <span *ngIf="date !== '-'">{{ date | date: 'dd/MM/y' }}</span>
+  <span *ngIf="date !== '-'">{{ date | date: 'dd.MM.y' }}</span>
   <span *ngIf="!isEditable && !isBlocked && !uneditableStatus" class="pointer" (click)="edit()" (keydown)="edit($event)">&#9998;</span>
   <mat-spinner *ngIf="isBlocked" strokeWidth="3" diameter="20"></mat-spinner>
 </div>
