added the display

--- a/src/app/main/component/user/components/profile/users-friends/users-friends.component.html
+++ b/src/app/main/component/user/components/profile/users-friends/users-friends.component.html
@@ -24,6 +24,7 @@
             [firstName]="friend.name"
             class="friend-img"
             [additionalImgClass]="'friend-user-profile'"
+            [isOnline]="isFriendOnline(friend.id)"
           >
           </app-user-profile-image>
           <p class="friend-name">{{ friend.name | firststringword | maxTextLength: 10 }}</p>
